--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,7 @@ html, body {
         animation-fill-mode: both;
     }
 }
-
+/*
 @keyframes showMenu {
     from {
         transform: translateY(-1rem);
@@ -138,7 +138,7 @@ html, body {
         visibility: hidden;
     }
 }
-
+*/
 .header__item {
     margin: 0;
     padding: 0;
@@ -263,12 +263,12 @@ html, body {
 .section__tab_active {
     background: #FFD93E;
 }
-
+/*
 .section__tab:not(.section__tab_active):hover {
     background: #fff;
     box-shadow: 0 2px 6px 0 rgba(197,186,186,0.50);
 }
-
+*/
 .hero-dashboard {
     position: relative;
     box-sizing: border-box;
