--- a/src/styles.css
+++ b/src/styles.css
@@ -7,8 +7,8 @@ html {
 body {
   display: flex;
   flex-direction: column;
-  font-family: inherit;
-  line-height: inherit;
+  /*font-family: inherit;
+  line-height: inherit;*/
   margin: 0;
 }
 
