--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 html {
-  font-size: 100%;
+  /*font-size: 100%;*/
   font-family: Arial, sans-serif;
   line-height: 1.25;
 }
@@ -28,14 +28,14 @@ body {
 }
 
 .header {
-  position: relative;
+  position: relative; 
   display: flex;
   flex: 0 0 auto;
   align-items: center;
   height: 5.75rem;
   margin-bottom: 1.875rem;
   padding: 0 2.5rem;
-  font-family: Arial, sans-serif;
+  /*font-family: Arial, sans-serif;*/
   border-bottom: 1px solid #f0f0f0;
 }
 
@@ -282,7 +282,7 @@ body {
 
 @media (min-width: 769px) {
   .hero-dashboard {
-    background-image: url(assets/bg@2x.png);
+    background-image: url(assets/bg@2x.jpg);
   }
 }
 
@@ -292,7 +292,7 @@ body {
     gap: 1.25rem;
     height: auto;
     margin-bottom: 0.3125rem;
-    background-image: url(assets/bg.png);
+    background-image: url(assets/bg.jpg);
   }
 }
 
